--- a/arrow-db-browser/src/assets/base.css
+++ b/arrow-db-browser/src/assets/base.css
@@ -1,12 +1,25 @@
 html, body {
   height: 100%;
   margin: 0; /* Remove default margins */
+  font-family: sans-serif;
 }
 
 #root {
   height: 100%;
+  color-scheme: light dark;
+  background-color: light-dark(#fff, hsl(0deg 0% 10%));
+  color: light-dark(#111, #fff);
 }
 
 .fill-grid {
-  height: 100%;
+  /* height: 100%; */
+  block-size: 100%;
+}
+
+.rdg-cell {
+  border: 1px solid #eee;
+}
+
+:before,:after {
+  box-sizing: border-box;
 }
